--- a/front-end/package.json
+++ b/front-end/package.json
@@ -23,6 +23,7 @@
     "@testing-library/react": "12.1.4",
     "@testing-library/user-event": "13.5.0",
     "axios": "^0.27.2",
+    "jsonwebtoken": "^8.5.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router-dom": "^6.4.0",
@@ -35,6 +36,9 @@
     "stylelint": "14.6.0",
     "stylelint-config-standard": "25.0.0",
     "stylelint-order": "5.0.0"
+  },
+  "browser": {
+    "crypto": false
   },
   "eslintConfig": {
     "extends": [
